<resources>
    <string name="app_name">CarTrackApp</string>
    <string name="menu_open">Aberto</string>
    <string name="menu_close">Fechado</string>
    <string name="lblUsernameEmail">Username ou Email</string>
    <string name="lblUsername">Username</string>
    <string name="lblEmailEquipaTecnica">Email do Suporte: </string>
    <string name="lblEquipaTecnica">Email do Suporte </string>
    <string name="lblTeEquipaTecnica">Telemovel do Suporte </string>
    <string name="btnSave">Guardar </string>
    <string name="lblTelemovelEquipaTecnica">Telemovel do Suporte </string>
    <string name="lblEmail">Email</string>
    <string name="lblConfEmail">Confirmar Email</string>
    <string name="lblPassword">Password</string>
    <string name="lblConfPassword">Confirmar Password</string>
    <string name="lblAjuda">Caso de ajuda, clique em mim!</string>
    <string name="lblLogin">Login</string>
    <string name="lblRegist">Registar</string>
    <string name="pctPerfil">Perfil de Utilizador</string>
    <string name="lblHello">Olá Diogo</string>
    <string name="title_activity_car">activity_car</string>
    <string name="apiGoogleMaps">AIzaSyA8ZT4gKjObDkc9s5NE7xVRDBuv7-j8HQI</string>
    <string name="lblModelo">Modelo:\u0020</string>
    <string name="lblData">Data:\u0020</string>
    <string name="lblEmailInspecao">Email:\u0020</string>
    <string name="lblProximaInspecao">Proxima Inspeção:\u0020</string>
    <string name="lblUltimaInspecao">Ultima Inspeção:\u0020</string>
    <string name="lblPreco">Preço:\u0020</string>
    <string name="lblMotor">Motor:\u0020</string>
    <string name="lblFreios">Freios:\u0020</string>
    <string name="lblSuspensaoDirecao">Suspensao Direção:\u0020</string>
    <string name="lblSistemaEletrico">Sistema Elétrico:\u0020</string>
    <string name="lblTransmissaoEmbreagem">Transmisão Embreagem:\u0020</string>
    <string name="lblChefeDoCentro">Chefe Do Centro:\u0020</string>
    <string name="lblEstruturaCarroceria">Estrutura Carroceria:\u0020</string>
    <string name="lblDocumentacaoPlacas">Documentacao Placas:\u0020</string>
    <string name="lblMorada">Morada:\u0020</string>
    <string name="lblTelefone">Telefone:\u0020</string>
    <string name="lblNomeCentro">Nome Centro:\u0020</string>
    <string name="lblEmissoes">Emissoes:\u0020</string>
    <string name="lblTipo">Tipo:\u0020</string>
    <string name="lblDescriacao">Descrição:\u0020</string>
    <string name="lblValor">Valor:\u0020</string>
    <string name="lblCilindrada">Cilindrada: </string>
    <string name="lblConsumo">Consumo: </string>
    <string name="lblMesAno">Ano/Mes: </string>
    <string name="lblKm">Km feitos: </string>
    <string name="lbllastLoc">Ultima Localização: </string>
    <string name="lblMatricula">Matricula:\u0020</string>
    <string name="lblMarca">Marca:\u0020</string>b
    <string name="lblName">Nome e Apelido </string>
    <string name="lblSettings">Settings</string>
    <string name="lblLogOut">LogOut</string>
    <string name="btnAdicionarCar">Adicionar Carro</string>
    <string name="txtMatricula">Adicionar Matricula</string>
    <string name="txtModelo">Adicionar Modelo</string>
    <string name="txtCilindrada">Adicionar Cilindrada</string>
    <string name="txtAnoMes">Adicionar AnoMes</string>
    <string name="txtConsumo">Adicionar Consumo</string>
    <string name="txtKm">meter os kilometros</string>
    <string name="btnRegist">Registar Conta</string>
    <string name="lblNascimento">Data de Nascimento</string>
    <string name="btnAddInspecao">Adicionar\nInspecção</string>
    <string name="btnAddMulta">Adicionar\nMulta</string>


    <string name="lblNomeInspecao">Centro\n de Inspeção</string>
    <string name="lblDataEHoraInspecao">Data e Hora\nda Inspeção</string>
    <string name="lblCarInspecao">Carro\nda Inspeção</string>
    <string name="lblValorMulta">Valor\nda Multa</string>
    <string name="lblDataEHoraMulta">Data e Hora\nda Multa</string>
    <string name="lblDetalhesDaMulta">Detalhes \nda Multa</string>
    <string name="lblValorMultaHint">Valorda Multa</string>
    <string name="lblDataEHoraInspecaoHint">Data e Hora da Inspecção</string>
    <string name="lblDataEHoraMultaHint">Data e Hora da Multa</string>
    <string name="Marca" />
    <string name="Tipo" />
    <string name="Matricula" />
    <string name="Descriçao" />
    <string name="Valor" />
    <string name="Data" />

    <string name="lblAnteriorBombas">Anterior</string>
    <string name="lblProximoBombas">Proxima</string>

    <string-array name="Consumo">
        <item>Eletrico</item>
        <item>Gasoleo</item>
        <item>Gas</item>
        <item>Gasolina</item>
    </string-array>

    <string-array name="EmptySpinner">
        <item>Sem Dados</item>
    </string-array>
</resources>