<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/some_id_if_needed"
        layout="@layout/top_menu_inflate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/circularImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/car"
        app:civ_border_color="@color/white"
        app:civ_border_width="4dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_id_if_needed" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="55dp"
        android:text="@string/app_name"
        app:layout_constraintStart_toEndOf="@+id/circularImageView"
        app:layout_constraintTop_toBottomOf="@+id/some_id_if_needed" />


    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="string/lblTeEquipaTecnica"
        android:layout_marginTop="6dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/lblEmailEquipaTecnica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circularImageView" />

    <Button
        android:id="@+id/btnemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="50dp"
        android:text="@string/lblEquipaTecnica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:layout_marginStart="50dp"
        android:text="@string/lblTelemovelEquipaTecnica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


</androidx.constraintlayout.widget.ConstraintLayout>