<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/some_id_if_needed"
        layout="@layout/top_menu_inflate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="45dp"
        android:layout_marginTop="212dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblConfEmail"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_weight="1"
            android:hint="@string/lblConfEmail"
            android:text="@string/lblConfEmail"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txtConfEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/lblConfEmail"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="363dp"
        android:layout_height="45dp"
        android:layout_marginTop="300dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblConfPass"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_weight="1"
            android:hint="@string/lblConfEmail"
            android:text="@string/lblConfPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txtConfPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lblConfPassword"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="45dp"
        android:layout_marginTop="256dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblPass"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:hint="@string/lblConfEmail"
            android:text="@string/lblPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/lblPassword"
            android:minHeight="48dp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="45dp"
        android:layout_marginTop="168dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lblEmail"
            android:text="@string/lblEmail"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/lblEmail"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="363dp"
        android:layout_height="45dp"
        android:layout_marginTop="124dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblUser"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblUsername" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/lblUsername"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegist"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
