<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/some_id_if_needed"
        layout="@layout/top_menu_inflate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="413dp"
        android:layout_height="83dp"
        app:layout_constraintTop_toBottomOf="@+id/some_id_if_needed"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <Button
            android:id="@+id/btnAddCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@+id/btnAddCoime"
            android:layout_toEndOf="@+id/btnAddInspction"
            android:text="@string/btnAdicionarCar" />

        <Button
            android:id="@+id/btnAddCoime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="Button" />

        <Button
            android:id="@+id/btnAddInspction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:text="Button" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pnlNewCar"
        android:layout_width="match_parent"
        android:layout_height="595dp"
        android:layout_below="@id/relativeLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:id="@+id/pnlModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblPlusModelo"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblModelo" />

            <EditText
                android:id="@+id/txtPlusModelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pnlMatricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pnlModelo"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblPlusMatricula"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/lblMatri"

                 />

            <EditText
                android:id="@+id/txtPlusMatricula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pnlCilindrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pnlMatricula"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblPlusCilindrada"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCilindrada" />

            <EditText
                android:id="@+id/txtPlusCilindrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pnlAnoMes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pnlCilindrada"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblPlusAnoMes"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:clickable="true"
                android:text="@string/lblMesAno" />

            <EditText
                android:id="@+id/txtPlusAnoMes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:editable="false"
                android:hint="Name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pnlConsumo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pnlAnoMes"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblConsumo"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/lblConsumo" />
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:drawSelectorOnTop="true"
                android:entries="@array/Consumo"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pnlKm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pnlConsumo"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblPlusKm"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblKm" />

            <EditText
                android:id="@+id/txtPlusKm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="Name" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/pnlNewCoime"
            android:layout_width="match_parent"
            android:layout_height="595dp"
            android:layout_below="@id/relativeLayout2"
            android:layout_marginTop="23dp"
            tools:visibility="invisible">

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pnlNewInspection"
        android:layout_width="match_parent"
        android:layout_height="595dp"
        android:layout_below="@id/relativeLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        tools:layout_editor_absoluteX="1dp">

    </RelativeLayout>


    <Button
        android:id="@+id/btnSaveAddValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>